--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,35 @@
     <groupId>GraphiteMaven</groupId>
     <artifactId>GraphiteMaven</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <mavenCompilerPlugin>3.0</mavenCompilerPlugin>
+        <maven-compiler-plugin.source>1.6</maven-compiler-plugin.source>
+        <hadoop-core.version>1.0.4</hadoop-core.version>
+    </properties>
 
 
-  <dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${mavenCompilerPlugin}</version>
+                <configuration>
+                    <source>${maven-compiler-plugin.source}</source>
+                    <target>${maven-compiler-plugin.source}</target>
+                    <compilerArgument>-Xlint</compilerArgument>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <dependencies>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-core</artifactId>
-      <version>1.0.4</version>
+      <version>${hadoop-core.version}</version>
     </dependency>
   </dependencies>
 </project>
